Cocoa: 'Quit' in menu bar does not work

If you have two window, each with its own menu bar that
has a 'Quit' action, we reuse the quit menu item when
switching between the windows. Now, it we deleteLater one of
the menu bars, the new menubar will update the 'Quit' item
just before deleteLater will come along and remote the update
again. This patch will fix this.

Task-number: QTBUG-4684
Reviewed-by: Prasanth